// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo esv secret list "frodo esv secret list --usage --long --directory test/e2e/exports/all-separate/cloud": should list the ids, active/loaded versions, statuses, descriptions, modifiers, modified times, and usage of the esv secrets in the test/e2e/exports/all-separate/cloud directory 1`] = `
"Id                                 │ Active│ Loaded│Status│Description                             │Modifier                            │Modified (UTC)               │Used                                                                                                                        
                                   │Version│Version│      │                                        │                                    │                             │                                                                                                                            
esv-admin-token                    │      1│      1│loaded│Long-lived admin token                  │ba58ff99-76d3-4c69-9c4a-7f150ac70e2c│Wed, 20 Mar 2024 14:46:13 GMT│no                                                                                                                          
esv-brando-pingone                 │      4│      4│loaded│This is to show the connection between  │Frodo-SA-1701393386423              │Mon, 24 Jun 2024 00:44:06 GMT│no                                                                                                                          
                                   │       │       │      │PingOne and AIC.                        │                                    │                             │                                                                                                                            
esv-secret-import-test1            │      1│      1│loaded│Secret Import Test 1                    │volker.scheuber@forgerock.com       │Sat, 22 Jun 2024 01:13:13 GMT│no                                                                                                                          
esv-secret-import-test2            │      1│      1│loaded│Secret Import Test 2                    │volker.scheuber@forgerock.com       │Sat, 22 Jun 2024 01:13:41 GMT│no                                                                                                                          
esv-test-secret                    │      1│      1│loaded│This is a test secret containing a      │Frodo-SA-1701393386423              │Fri, 05 Jul 2024 17:53:53 GMT│no                                                                                                                          
                                   │       │       │      │simple string value.                    │                                    │                             │                                                                                                                            
esv-test-secret-cert-pem           │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:48:49 GMT│no                                                                                                                          
                                   │       │       │      │cert file.                              │                                    │                             │                                                                                                                            
esv-test-secret-cert-pem-raw       │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:49:20 GMT│no                                                                                                                          
                                   │       │       │      │cert file (raw).                        │                                    │                             │                                                                                                                            
esv-test-secret-euler              │      1│      1│loaded│A test secret containing the value of   │phales@trivir.com                   │Thu, 14 Dec 2023 15:27:34 GMT│yes (at realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script)
                                   │       │       │      │Euler's number                          │                                    │                             │                                                                                                                            
esv-test-secret-file-base64hmac    │      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:46:37 GMT│no                                                                                                                          
                                   │       │       │      │encoded hmac key file.                  │                                    │                             │                                                                                                                            
esv-test-secret-file-base64hmac-raw│      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:47:03 GMT│no                                                                                                                          
                                   │       │       │      │encoded hmac key file (raw).            │                                    │                             │                                                                                                                            
esv-test-secret-pi                 │      1│      1│loaded│Secret that contains the value of pi    │phales@trivir.com                   │Thu, 14 Dec 2023 15:22:28 GMT│yes (at realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script)
esv-test-secret-pi-generic         │      3│      3│loaded│                                        │Frodo-SA-1701393386423              │Mon, 15 Jul 2024 03:20:09 GMT│no                                                                                                                          
esv-volkers-test-secret            │     10│     10│loaded│Volker's test secret                    │Frodo-SA-1701393386423              │Wed, 26 Jun 2024 01:37:06 GMT│no                                                                                                                          
"
`;

exports[`frodo esv secret list "frodo esv secret list --usage --long --file test/e2e/exports/all/all.cloud.json": should list the ids, active/loaded versions, statuses, descriptions, modifiers, modified times, and usage of the esv secrets in the test/e2e/exports/all/all.cloud.json file 1`] = `
"Id                                 │ Active│ Loaded│Status│Description                             │Modifier                            │Modified (UTC)               │Used                                                                                                                        
                                   │Version│Version│      │                                        │                                    │                             │                                                                                                                            
esv-admin-token                    │      1│      1│loaded│Long-lived admin token                  │ba58ff99-76d3-4c69-9c4a-7f150ac70e2c│Wed, 20 Mar 2024 14:46:13 GMT│no                                                                                                                          
esv-brando-pingone                 │      4│      4│loaded│This is to show the connection between  │Frodo-SA-1701393386423              │Mon, 24 Jun 2024 00:44:06 GMT│no                                                                                                                          
                                   │       │       │      │PingOne and AIC.                        │                                    │                             │                                                                                                                            
esv-secret-import-test1            │      1│      1│loaded│Secret Import Test 1                    │volker.scheuber@forgerock.com       │Sat, 22 Jun 2024 01:13:13 GMT│no                                                                                                                          
esv-secret-import-test2            │      1│      1│loaded│Secret Import Test 2                    │volker.scheuber@forgerock.com       │Sat, 22 Jun 2024 01:13:41 GMT│no                                                                                                                          
esv-test-secret                    │      1│      1│loaded│This is a test secret containing a      │Frodo-SA-1701393386423              │Fri, 05 Jul 2024 17:53:53 GMT│no                                                                                                                          
                                   │       │       │      │simple string value.                    │                                    │                             │                                                                                                                            
esv-test-secret-cert-pem           │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:48:49 GMT│no                                                                                                                          
                                   │       │       │      │cert file.                              │                                    │                             │                                                                                                                            
esv-test-secret-cert-pem-raw       │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:49:20 GMT│no                                                                                                                          
                                   │       │       │      │cert file (raw).                        │                                    │                             │                                                                                                                            
esv-test-secret-euler              │      1│      1│loaded│A test secret containing the value of   │phales@trivir.com                   │Thu, 14 Dec 2023 15:27:34 GMT│yes (at realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script)
                                   │       │       │      │Euler's number                          │                                    │                             │                                                                                                                            
esv-test-secret-file-base64hmac    │      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:46:37 GMT│no                                                                                                                          
                                   │       │       │      │encoded hmac key file.                  │                                    │                             │                                                                                                                            
esv-test-secret-file-base64hmac-raw│      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:47:03 GMT│no                                                                                                                          
                                   │       │       │      │encoded hmac key file (raw).            │                                    │                             │                                                                                                                            
esv-test-secret-pi                 │      1│      1│loaded│Secret that contains the value of pi    │phales@trivir.com                   │Thu, 14 Dec 2023 15:22:28 GMT│yes (at realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script)
esv-test-secret-pi-generic         │      3│      3│loaded│                                        │Frodo-SA-1701393386423              │Mon, 15 Jul 2024 03:20:09 GMT│no                                                                                                                          
esv-volkers-test-secret            │     10│     10│loaded│Volker's test secret                    │Frodo-SA-1701393386423              │Wed, 26 Jun 2024 01:37:06 GMT│no                                                                                                                          
"
`;

exports[`frodo esv secret list "frodo esv secret list -l": should list the ids, active/loaded versions, statuses, descriptions, modifiers, and modified times of the esv secrets 1`] = `
"Id                                 │ Active│ Loaded│Status│Description                             │Modifier                            │Modified (UTC)               
                                   │Version│Version│      │                                        │                                    │                             
esv-admin-token                    │      1│      1│loaded│Long-lived admin token                  │ba58ff99-76d3-4c69-9c4a-7f150ac70e2c│Wed, 20 Mar 2024 14:46:13 GMT
esv-test-secret-cert-pem           │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:48:49 GMT
                                   │       │       │      │cert file.                              │                                    │                             
esv-test-secret-cert-pem-raw       │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:49:20 GMT
                                   │       │       │      │cert file (raw).                        │                                    │                             
esv-test-secret-euler              │      1│      1│loaded│A test secret containing the value of   │phales@trivir.com                   │Thu, 14 Dec 2023 15:27:34 GMT
                                   │       │       │      │Euler's number                          │                                    │                             
esv-test-secret-file-base64hmac    │      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:46:37 GMT
                                   │       │       │      │encoded hmac key file.                  │                                    │                             
esv-test-secret-file-base64hmac-raw│      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:47:03 GMT
                                   │       │       │      │encoded hmac key file (raw).            │                                    │                             
esv-test-secret-pi                 │      1│      1│loaded│Secret that contains the value of pi    │phales@trivir.com                   │Thu, 14 Dec 2023 15:22:28 GMT
esv-test-secret-pi-generic         │      2│      2│loaded│                                        │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 00:15:02 GMT
"
`;

exports[`frodo esv secret list "frodo esv secret list -lu": should list the ids, active/loaded versions, statuses, descriptions, modifiers, modified times, and usage of the esv secrets 1`] = `
"Id                                 │ Active│ Loaded│Status│Description                             │Modifier                            │Modified (UTC)               │Used                                                                                                                                                         
                                   │Version│Version│      │                                        │                                    │                             │                                                                                                                                                             
esv-admin-token                    │      1│      1│loaded│Long-lived admin token                  │ba58ff99-76d3-4c69-9c4a-7f150ac70e2c│Wed, 20 Mar 2024 14:46:13 GMT│no                                                                                                                                                           
esv-brando-pingone                 │      4│      4│loaded│This is to show the connection between  │Frodo-SA-1701393386423              │Mon, 24 Jun 2024 00:44:06 GMT│no                                                                                                                                                           
                                   │       │       │      │PingOne and AIC.                        │                                    │                             │                                                                                                                                                             
esv-secret-import-test1            │      1│      1│loaded│Secret Import Test 1                    │volker.scheuber@forgerock.com       │Sat, 22 Jun 2024 01:13:13 GMT│no                                                                                                                                                           
esv-secret-import-test2            │      1│      1│loaded│Secret Import Test 2                    │volker.scheuber@forgerock.com       │Sat, 22 Jun 2024 01:13:41 GMT│no                                                                                                                                                           
esv-test-secret                    │      1│      1│loaded│This is a test secret containing a      │Frodo-SA-1701393386423              │Fri, 05 Jul 2024 17:53:53 GMT│no                                                                                                                                                           
                                   │       │       │      │simple string value.                    │                                    │                             │                                                                                                                                                             
esv-test-secret-cert-pem           │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:48:49 GMT│no                                                                                                                                                           
                                   │       │       │      │cert file.                              │                                    │                             │                                                                                                                                                             
esv-test-secret-cert-pem-raw       │      1│      1│loaded│This is a test secret from a pem encoded│6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:49:20 GMT│no                                                                                                                                                           
                                   │       │       │      │cert file (raw).                        │                                    │                             │                                                                                                                                                             
esv-test-secret-euler              │      1│      1│loaded│A test secret containing the value of   │phales@trivir.com                   │Thu, 14 Dec 2023 15:27:34 GMT│yes (3 uses, including: realm.root-alpha.script.b21fc0e1-6d00-4528-b196-5c6d9d695a69(name: 'test-script-with-secrets-and-variables - imported (1)').script.3)
                                   │       │       │      │Euler's number                          │                                    │                             │                                                                                                                                                             
esv-test-secret-file-base64hmac    │      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:46:37 GMT│no                                                                                                                                                           
                                   │       │       │      │encoded hmac key file.                  │                                    │                             │                                                                                                                                                             
esv-test-secret-file-base64hmac-raw│      1│      1│loaded│This is a test secret from base64       │6bac97fb-0665-4ba9-b66c-1cf70e074d72│Sat, 20 Jan 2024 03:47:03 GMT│no                                                                                                                                                           
                                   │       │       │      │encoded hmac key file (raw).            │                                    │                             │                                                                                                                                                             
esv-test-secret-pi                 │      1│      1│loaded│Secret that contains the value of pi    │phales@trivir.com                   │Thu, 14 Dec 2023 15:22:28 GMT│yes (6 uses, including: realm.root-alpha.script.b21fc0e1-6d00-4528-b196-5c6d9d695a69(name: 'test-script-with-secrets-and-variables - imported (1)').script.1)
esv-test-secret-pi-generic         │      3│      3│loaded│                                        │Frodo-SA-1701393386423              │Mon, 15 Jul 2024 03:20:09 GMT│no                                                                                                                                                           
esv-volkers-test-secret            │     10│     10│loaded│Volker's test secret                    │Frodo-SA-1701393386423              │Wed, 26 Jun 2024 01:37:06 GMT│no                                                                                                                                                           
"
`;

exports[`frodo esv secret list "frodo esv secret list -u": should list the usage of the esv secrets 1`] = `
"Id                                 │Used                                                                                                                                                         
esv-admin-token                    │no                                                                                                                                                           
esv-brando-pingone                 │no                                                                                                                                                           
esv-secret-import-test1            │no                                                                                                                                                           
esv-secret-import-test2            │no                                                                                                                                                           
esv-test-secret                    │no                                                                                                                                                           
esv-test-secret-cert-pem           │no                                                                                                                                                           
esv-test-secret-cert-pem-raw       │no                                                                                                                                                           
esv-test-secret-euler              │yes (3 uses, including: realm.root-alpha.script.b21fc0e1-6d00-4528-b196-5c6d9d695a69(name: 'test-script-with-secrets-and-variables - imported (1)').script.3)
esv-test-secret-file-base64hmac    │no                                                                                                                                                           
esv-test-secret-file-base64hmac-raw│no                                                                                                                                                           
esv-test-secret-pi                 │yes (6 uses, including: realm.root-alpha.script.b21fc0e1-6d00-4528-b196-5c6d9d695a69(name: 'test-script-with-secrets-and-variables - imported (1)').script.1)
esv-test-secret-pi-generic         │no                                                                                                                                                           
esv-volkers-test-secret            │no                                                                                                                                                           
"
`;

exports[`frodo esv secret list "frodo esv secret list -uD test/e2e/exports/all-separate/cloud": should list the usage of the esv secrets in the test/e2e/exports/all-separate/cloud directory 1`] = `
"Id                                 │Used                                                                                                                        
esv-admin-token                    │no                                                                                                                          
esv-brando-pingone                 │no                                                                                                                          
esv-secret-import-test1            │no                                                                                                                          
esv-secret-import-test2            │no                                                                                                                          
esv-test-secret                    │no                                                                                                                          
esv-test-secret-cert-pem           │no                                                                                                                          
esv-test-secret-cert-pem-raw       │no                                                                                                                          
esv-test-secret-euler              │yes (at realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script)
esv-test-secret-file-base64hmac    │no                                                                                                                          
esv-test-secret-file-base64hmac-raw│no                                                                                                                          
esv-test-secret-pi                 │yes (at realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script)
esv-test-secret-pi-generic         │no                                                                                                                          
esv-volkers-test-secret            │no                                                                                                                          
"
`;

exports[`frodo esv secret list "frodo esv secret list -uf test/e2e/exports/all/all.cloud.json": should list the usage of the esv secrets in the test/e2e/exports/all/all.cloud.json file 1`] = `
"Id                                 │Used                                                                                                                        
esv-admin-token                    │no                                                                                                                          
esv-brando-pingone                 │no                                                                                                                          
esv-secret-import-test1            │no                                                                                                                          
esv-secret-import-test2            │no                                                                                                                          
esv-test-secret                    │no                                                                                                                          
esv-test-secret-cert-pem           │no                                                                                                                          
esv-test-secret-cert-pem-raw       │no                                                                                                                          
esv-test-secret-euler              │yes (at realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script)
esv-test-secret-file-base64hmac    │no                                                                                                                          
esv-test-secret-file-base64hmac-raw│no                                                                                                                          
esv-test-secret-pi                 │yes (at realm.root-alpha.script.da7a96a8-7969-4dab-9c6e-a812938cc76d(name: 'test-script-with-secrets-and-variables').script)
esv-test-secret-pi-generic         │no                                                                                                                          
esv-volkers-test-secret            │no                                                                                                                          
"
`;

exports[`frodo esv secret list "frodo esv secret list": should list the ids of the esv secrets 1`] = `
"esv-admin-token
esv-test-secret-cert-pem
esv-test-secret-cert-pem-raw
esv-test-secret-euler
esv-test-secret-file-base64hmac
esv-test-secret-file-base64hmac-raw
esv-test-secret-pi
esv-test-secret-pi-generic
"
`;
